--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,232 +1,42 @@
-
-<div class="big home-top fullImage firstRow">
-	<div class="big-copy white text-center">
-		<div class="row">
-			<div class="columns large-12">
-				<h1>Join Five Four Today</h1>
-				<h1>Hand-Selected Clothing For Men</h1>
-				<p>We are a men's clothing destination with a new collection each month. Membership is free.</p>
-				<a href="#" class="ghost-button getStarted">Get Started</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<a name="definition"></a>
-<div class="big ">
-	<div class="big-copy text-center">
-		<div class="row">
-			<div class="columns large-12">
-				<h1>Definition</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur aunt ut labore et dolore magna aliqua</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="columns large-4 medium-4 small-12">
-				<div class="club-price">
-					<img src="assets/img/definition/club-price.jpg" alt="Club Price">
-					<span>$60</span>
+<div class="redun">
+	<div class="split l">
+		<div class="splash">
+			<img class='logo' src="assets/img/redun-logo.png" alt="RE / DUN">
+			<h1>Discover Your Individuality</h1>
+			<h2>Iconic. Sustainable. Individual.</h2>
+			<hr>
+			<p>
+				Sign up for a chance to claim your unique jean mid-July. 
+				Each pair is reconstructed into today's modern fits &mdash; 50 pairs
+				at launch, limited quantities. First come, first served.
+			</p>
+			<div class="signup">
+				<input type="text" placeholder="Your Email">
+				<div class="post">
+					<a href="#">
+						Get Early Access
+					</a>
 				</div>
-				<div class="club-what">
-					<hr>
-					<h5>What you receive</h5>
-					<hr>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, recusandae, suscipit cupiditate magni consequatur incidunt</p>
-				</div>
-				
-				<hr>
 			</div>
-			<div class="columns large-4 medium-4 small-6">
-				<img src="assets/img/definition/shirt.jpg" alt="Our Shirts">
-			</div>
-			<div class="columns large-4 medium-4 small-6">
-				<img src="assets/img/definition/craft.jpg" alt="Our Craft">
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="big short">
-	<div class="big-copy black white">
-		<div class="row">
-			<div class="columns large-12 text-center">
-				<h1>Featured In</h1>
-				<ul class='featured-list'>
-					<li class='attack-of-the-show'></li>
-					<li class='g4'></li>
-					<li class='los-angeles-times'></li>
-					<li class='mashable'></li>
-					<li class='panodaily'></li>
-					<li class='techcrunch'></li>
-					<li class='thrillist'></li>
-					<li class='time'></li>
+			<div class="social">
+				<span>Share</span>
+				<ul class='inline'>
+					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+					<li><a href="#"><i class="fa fa-tumblr"></i></a></li>
 				</ul>
 			</div>
+			<div class="profile">
+				<h1>Individual N&ordm;: 001</h1>
+				<h3>Bella - RE/JUVENATE</h3>
+				<p>Student, model, photographer</p>
+			</div>
 		</div>
+		
+	</div>
+	<div class="split r">
+		<img class='model' src="assets/img/models/1.jpg" alt="Bella - RE/JUVENATE">
 	</div>
 </div>
-
-<div class="big variable">
-	<div class="half">
-		<div class="full-bg-image">
-		<img src="assets/img/big/half-left-hat.jpg" alt="Left Thing">
-		</div>
-	</div>
-	<div class="half ">
-		<div class="full-bg-image">
-		<img src="assets/img/big/half-right-clothing-rack.jpg" alt="Left Thing">
-		</div>
-	</div>
-</div>
-
-<a name="how-it-works"></a>
-<div class="big how">
-	<div class="big-copy text-center">
-		<div class="row">
-			<div class="columns large-12">
-				<h1>How It Works</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur aunt ut labore et dolore magna aliqua</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="columns large-4 medium-4 small-12">
-				<img src="assets/img/how/step1.jpg" alt="Step 1">
-				<h5><span>Step 1</span></h5>
-				<h6>Sign Up</h6>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</div>
-			<div class="columns large-4 medium-4 small-12">
-				<img src="assets/img/how/step2.jpg" alt="Step 2">
-				<h5><span>Step 2</span></h5>
-				<h6>Stylist Selects</h6>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</div>
-			<div class="columns large-4 medium-4 small-12">
-				<img src="assets/img/how/step3.jpg" alt="Step 3">
-				<h5><span>Step 3</span></h5>
-				<h6>Receive Clothing</h6>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<a name="collections"></a>
-<div class="big extreme">
-	<div class="row text-center row-collection">
-		<div class="columns large-12">
-			<h1>Collections</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur aunt ut labore et dolore magna aliqua</p>
-		</div>
-	</div>
-
-	<div id="collection">
-		<div class='slide'>
-			<div class="half full hide-for-small">
-				<img src="assets/img/collection/inventory-magazine-2013-fall-winter-editorial-5.jpg" alt="Fall Winter">
-			</div>
-			<div class="half">
-				<div class="row text-center">
-					<div class="columns large-8 large-centered">
-						<h5><span>N<sup>o</sup> 01</span></h5>
-						<p><em>For the iconic style</em></p>
-						<h2>Business Casual</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, temporibus, beatae modi accusamus at aliquam</p>
-						<img src="assets/img/collection/jackets.jpg" alt="Jackets">
-						<a href="#" class="ghost-button invert getStarted">Get Started</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class='slide'>
-			<div class="half full hide-for-small">
-				<img src="assets/img/collection/look2.jpg" alt="Something Else">
-			</div>
-			<div class="half">
-				<div class="row text-center">
-					<div class="columns large-8 large-centered">
-						<h5><span>N<sup>o</sup> 02</span></h5>
-						<p><em>Another thing</em></p>
-						<h2>Styled Uplook</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, temporibus, beatae modi accusamus at aliquam</p>
-						<img src="assets/img/collection/jackets.jpg" alt="Jackets">
-						<a href="#" class="ghost-button invert getStarted">Get Started</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class='slide'>
-			<div class="half full hide-for-small">
-				<img src="assets/img/collection/look3.jpg" alt="Final Look">
-			</div>
-			<div class="half">
-				<div class="row text-center">
-					<div class="columns large-8 large-centered">
-						<h5><span>N<sup>o</sup> 03</span></h5>
-						<p><em>The finalé</em></p>
-						<h2>Proper Dress</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, temporibus, beatae modi accusamus at aliquam</p>
-						<img src="assets/img/collection/jackets.jpg" alt="Jackets">
-						<a href="#" class="ghost-button invert getStarted">Get Started</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="big short">
-	<div class="big-copy black white">
-		<div class="row">
-			<div class="columns large-12 text-center">
-				<h1>Hassle-Free Shipping</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, tenetur, magnam, eveniet suscipit voluptas libero </p>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="big short">
-	<div class="big-copy text-center">
-		<div class="row">
-			<div class="columns large-4 medium-4 small-12">
-				<h3>Free Shipping</h3>
-				<p>Shipping is free both ways. Arrives in 5-7 business days after your initial request</p>
-			</div>
-			<div class="columns large-4 medium-4 small-12">
-				<h3>Easy Returns</h3>
-				<p>A prepaid return label is provided. Email us and we'll schedule a free next-day return pickup</p>
-			</div>
-			<div class="columns large-4 medium-4 small-12">
-				<h3>Contiguous U.S.</h3>
-				<p>We currently service the lower 48 states and we hope to expand to other regions</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="columns large-12">
-				<a href="#" class="ghost-button invert getStarted">Get Started</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="big home-bottom">
-	<div class="big-copy white text-center">
-		<div class="row">
-			<div class="columns large-12">
-				<div class="logo invert"></div>
-				<h1>High-Minded Premium Menswear.</h1>
-				<h1>Parting With the Beaten Path</h1>	
-			</div>
-		</div>
-	</div>
-	<div class="full-bg-image">
-		<img src="assets/img/big/inventory-magazine-2013-fall-winter-editorial-9.jpg">
-	</div>	
-</div>
-
-
