--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	{{partials/head.html}}
+	<meta charset="utf-8">
+
+	<meta http-equiv="X-UA-Compatible" content="IE=8,chrome=1">
+
+	<title>Discover Your Individuality</title>
+	<meta name="description" content="RE/DUN">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/img/favicon@2x.png" />
+	<link rel="author" href="humans.txt" />
+	<link rel="robots" href="robots.txt" />
+
+	<link rel="stylesheet" href="assets/css/app.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
+
+	<!--[if lt IE 9]>
+	  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
+	  <script src="//s3.amazonaws.com/nwapi/nwmatcher/nwmatcher-1.2.5-min.js"></script>
+	  <script src="//html5base.googlecode.com/svn-history/r38/trunk/js/selectivizr-1.0.3b.js"></script>
+	<![endif]-->
+
+	<script type="text/javascript" src="//use.typekit.net/eqe5kxh.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-<div class="header">
-	<div class="brand left">
-		<a href="/">
-			<div class="logo"></div>
-			<h1 class='logotype'>Five Four</h1>
-		</a>
-	</div>
-	<div class="mnav right show-for-medium-down">
-		<a class="icon menu"></a>
-	</div>
-
-	<div class="nav right">
-		<ul>
-		{{partials/nav_default.html}}
-		</ul>
-	</div>
-</div>
