--- a/templates/js/modal.html
+++ b/templates/js/modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop">
 	<a href="#" class="close">x</a>
 	<div class="backdrop-content">
-		<div class="backdrop-inner">{{inner}}</div>
+		<div class="backdrop-inner"></div>
 	</div>
 </div>
