--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -6,9 +6,9 @@
 			<h2>Iconic. Sustainable. Individual.</h2>
 			<hr>
 			<p>
-				Sign up for a chance to claim your unique jean mid-July. 
-				Each pair is reconstructed into today's modern fits &mdash; 50 pairs
-				at launch, limited quantities. First come, first served.
+				Each pair of vintage jeans is reconstructed into today's modern fits. 
+				50 pairs available at launch, limited quantities to follow. Sign up
+				for early access to the debut RE/DUN collection.
 			</p>
 			<div class="signup">
 				<input type="text" placeholder="Your Email">
@@ -29,14 +29,11 @@
 				</ul>
 			</div>
 			<div class="profile">
-				<h1>Individual N&ordm;: 001</h1>
-				<h3>Bella - RE/JUVENATE</h3>
-				<p>Student, model, photographer</p>
 			</div>
 		</div>
 		
 	</div>
 	<div class="split r">
-		<img class='model' src="assets/img/models/1.jpg" alt="Bella - RE/JUVENATE">
+		<img class='model' src="assets/img/empty.jpg" alt="Bella - RE/JUVENATE">
 	</div>
 </div>
