--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -19,13 +19,16 @@ h2{
 	font-family:$serif-font;
 	font-weight:200;
 	color: $body-font-color-light;
+	margin-top:10px;
+	margin-bottom:10px;
 }
 h3{
 	text-transform: uppercase;
 	font-family:$body-font-family-condensed;
 	font-size:em(38px);
-	margin-top:em(10px);
-	margin-bottom:em(10px);
+	line-height:em(16px);
+	margin-top:10px;
+	margin-bottom:10px;
 }
 
 p{
@@ -35,8 +38,8 @@ p{
 }
 
 hr{
-	margin-top:50px;
-	margin-bottom:50px;
+	margin-top:20px;
+	margin-bottom:20px;
 	border:0;
 	border-top:1px solid #aeaeac;
 }
