--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -10,22 +10,30 @@
 				50 pairs available at launch, limited quantities to follow. Sign up
 				for early access to the debut RE/DUN collection.
 			</p>
+			<div class="registered">
+				<h1>Thank you for registering</h1>
+			</div>
 			<div class="signup">
-				<input type="text" placeholder="Your Email">
+				<form id="signup" action="http://redun.us8.list-manage.com/subscribe/post?u=172b119b0ff9109269cdb7a98&amp;id=79db0bd585" method="post">
+				<div class="tip"></div>
+				<input id="email" type="text" placeholder="Your Email">
+				<input id="ghost" type="text" name="first_name">
 				<div class="post">
-					<a href="#">
+					<a href="#" class='button'>
 						Get Early Access
 					</a>
 				</div>
+				</form>
 			</div>
+			
 			<div class="social">
 				<span>Share</span>
 				<ul class='inline'>
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-					<li><a href="#"><i class="fa fa-tumblr"></i></a></li>
+					<!-- <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li> -->
+					<!-- <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li> -->
+					<li><a target="_blank" href="http://instagram.com/redun"><i class="fa fa-instagram"></i></a></li>
+					<li><a target="_blank" href="http://www.pinterest.com/redun"><i class="fa fa-pinterest"></i></a></li>
+					<!-- <li><a target="_blank" href="#"><i class="fa fa-tumblr"></i></a></li> -->
 				</ul>
 			</div>
 			<div class="profile">
