--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,16 +1,19 @@
 .redun{
 	//@include position(fixed, 0);
 }
-
+$margin-scale: 0.8;
 .logo{
 	width: 300px;
 	max-width:100%;
+	margin-top: $margin-scale*135px;
+	margin-bottom:$margin-scale*25px;
 }
 .split{
 	position: absolute;
 	top: 0;
 	bottom:0;
 	width:50%;
+
 	&.r{
 		overflow: hidden;
 		z-index:100;
@@ -31,18 +34,97 @@
 .splash{
 	width:80%;
 	position:relative;
-	margin-top:10%;
 	float:right;
+
+}
+.registered{
+	position: relative;
+	
+	display: block;
+
+	h1{
+		position: absolute;
+		top:0;
+		line-height:$input-height;
+		background-color: #FFF;
+		color: $body-font-color;
+		padding:4px 30px;
+		left:0;
+		
+		opacity:0;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+		@include transition (all 250ms ease-out);
+		@include perspective(500px);
+		@include transform-style(preserve-3d);
+		@include transform(translate3d(-20px, 0px, 0px));
+	}
+	
+	&.done{
+		h1{
+			//box-shadow: rgba(0,0,0,0.25) 0 0 20px;
+			opacity: 1;
+			-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+			@include transform(translate3d(0px, 0px, 0px));
+		}
+		
+	}
 }
 .signup{
-	margin-top:10px;
-	margin-bottom:10px;
+	@include transition (all 250ms ease-out);
+	&.hide{
+		opacity: 0;
+		z-index:-1;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	}
+	&.submitting{
+		.button{
+			background-color: $body-font-color-light;
+		}
+	}
+	position: relative;
+	font-size:em(14px);
+	margin-top:$margin-scale*10px;
+	margin-bottom:$margin-scale*10px;
 	@include inline-block();
 	width:100%;
 	input,.post{
 		width:49%;
 		display:block;
 		float:left;
+	}
+	#email{
+
+	}
+	#ghost{
+		position: absolute;
+		left:-5000px;
+	}
+	.tip{
+		position: absolute;
+		top:0;
+		line-height:$input-height;
+		width:200px;
+		left:0;
+		background-color: $body-font-color;
+		&.error{
+			background-color: $alert-color;
+		}
+		color: $body-bg !important;
+		text-align:center;
+		opacity:0;
+		z-index:-1;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+		@include transition (all 250ms ease-out);
+		@include perspective(500px);
+		@include transform-style(preserve-3d);
+		@include transform(rotateX(-20deg) translate3d(0px, 0px,-10px) scale3d(1,1,1));
+		&.show{
+			-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+			opacity: 1;
+			z-index:100;
+			top: -0.25*$input-height;
+			@include transform(rotateX(20deg) translate3d(0px, 0px, 10px) scale3d(1.1, 1.1, 1.1));
+		}
 	}
 	.post{
 		@include transition(all 200ms ease);
@@ -61,7 +143,7 @@
 			text-decoration: none;
 			text-transform: uppercase;
 			font-weight:400;
-			
+			letter-spacing: $default-letter-spacing;
 			
 			display:block;
 			height:$input-height;
@@ -73,8 +155,7 @@
 
 $social-size: em(26px);
 .social{
-	margin-top:20px;
-	margin-bottom:40px;
+	margin-top:$margin-scale*10px;
 	line-height: $social-size;
 	span{
 		display:block;
@@ -99,6 +180,9 @@ $social-size: em(26px);
 		}
 	}
 }
+.profile{
+	margin-top:$margin-scale*55px;
+}
 
 @media #{$medium-down}{
 	.splash{
@@ -110,6 +194,7 @@ $social-size: em(26px);
 			text-indent: em(8px);
 		}
 		.post{
+			font-size: em(14px);
 			width:58%;
 		}
 	}
