--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,8 +5,7 @@
 <![endif]-->
 
 <script src="assets/js/vendor.js"></script>
-<script src="assets/js/boot.min.js"></script>
-<script src="assets/js/front.min.js"></script>
+<script src="assets/js/frontend.js"></script>
 <script>
 	App.init();
 </script>
